Fixed info card overflow and added aspect ratio for resume

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,21 @@
   --color-mantis: #71B26D;
   --color-asparagus: #679436;
 }
+
+.slick-track {
+  @apply py-15;
+}
+
+.slick-arrow.slick-prev:before,
+.slick-arrow.slick-next:before {
+  @apply text-indigodye;
+  @apply opacity-100;
+  @apply transition-colors duration-200;
+  color: #005380;
+}
+
+.slick-arrow.slick-prev:hover:before,
+.slick-arrow.slick-next:hover:before {
+  @apply text-honolulublue;
+  color: #0077B6
+}
